sending email when registering exhibitor

--- a/src/email-templates/welcome-exhibitor/welcome-exhibitor.ejs
+++ b/src/email-templates/welcome-exhibitor/welcome-exhibitor.ejs
@@ -42,7 +42,8 @@
 
       <div class="mx-auto my-10 w-max block">
         <div class="mx-auto w-max">
-          <a target="_blank" href="http://accounts.fikani.com/confirm-email?utm_email=<%-email%>&utm_type=exhibitor">
+          <a target="_blank"
+            href="http://accounts.fikani.com/confirm-email?utm_email=<%-email%>&utm_type=exhibitor&utm_key=<%-key%>">
             <button class="btn mt-2 white-1 bg-blue-1 rounded-lg py-3 px-6 uppercase text-md font-bold">
               Confirm email and login
             </button>
