updated user controller

--- a/src/email-templates/user-new-device-login/user-new-device-login.ejs
+++ b/src/email-templates/user-new-device-login/user-new-device-login.ejs
@@ -37,7 +37,7 @@
       </p>
     </div>
 
-    <div class="mt-10 mx-auto w-max">
+    <div class="my-6 mt-10 mx-auto w-max">
       <a target="_blank" href="http://accounts.fikani.com/login?access_key=CgVdl2">
         <button class="btn mt-2 white-1 bg-blue-1 rounded-lg py-3 px-6 uppercase text-lg font-bold">
           Change password
