--- a/src/email-templates/welcome-exhibitor/welcome-exhibitor.ejs
+++ b/src/email-templates/welcome-exhibitor/welcome-exhibitor.ejs
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-      <div class="my-6 text-sm">
+      <div class="mt-10 my-6 text-sm">
         <p>In case you need further assistance, write to us on</p>
         <a class="text-[#387ebf]" href="mailto:support@fikani.com">support@fikani.com</a>
       </div>
