--- a/src/email-templates/welcome-user/welcome-user-social-media.ejs
+++ b/src/email-templates/welcome-user/welcome-user-social-media.ejs
@@ -21,34 +21,29 @@
       </span>
     </h1>
     <div class="blue-2 text-lg font-bold">
-      We detected a new login on a <%-device.type%> (<%-device.name%>) device!
+      We are happy to have you onboard!
+    </div>
+
+    <div class="mt-10 mx-auto w-max">
+      <a target="_blank" href="http://accounts.fikani.com/login?access_key=CgVdl2">
+        <button class="btn mt-2 white-1 bg-blue-1 rounded-lg py-3 px-6 uppercase text-lg font-bold">
+          Go to Platform
+        </button>
+      </a>
     </div>
 
     <div class="mt-10">
       <p>
-        It looks like someone tried to log into your FIKANI account from a new device. If this is you, ignore this
-        email. If this isn't you, we suggest changing your password as soon as possible.
+        You are receiving this email because your email (<%-email%>) was used to create an account on the FIKANI Digital
+          platform.
       </p>
-    </div>
-
-    <div class="my-6">
-      <p class="font-semibold">
-        PS We highly recommend you changing your password now if this isn't you.
-      </p>
-    </div>
-
-    <div class="my-6 mt-10 mx-auto w-max">
-      <a target="_blank" href="http://accounts.fikani.com/login?access_key=CgVdl2">
-        <button class="btn mt-2 white-1 bg-blue-1 rounded-lg py-3 px-6 uppercase text-lg font-bold">
-          Change password
-        </button>
-      </a>
     </div>
 
     <div class="mt-10 my-6 text-sm">
       <p>
         In case you need further assistance, write to us on
       </p>
+
       <a class="text-[#387ebf]" href="mailto:support@fikani.com">support@fikani.com</a>
     </div>
 
