--- a/src/email-templates/welcome-user/welcome-user.ejs
+++ b/src/email-templates/welcome-user/welcome-user.ejs
@@ -38,7 +38,7 @@
       </p>
     </div>
 
-    <div class="my-6 text-sm">
+    <div class="mt-10 my-6 text-sm">
       <p>
         In case you need further assistance, write to us on
       </p>
