exhibitor email verify

--- a/src/email-templates/welcome-exhibitor/welcome-exhibitor.ejs
+++ b/src/email-templates/welcome-exhibitor/welcome-exhibitor.ejs
@@ -32,7 +32,7 @@
       <div class="my-10">
         <p>
           However, for security reasons and the best possible optimization of our services, it is necessary that this
-          email be confirmed.
+          email be confirmed within <span class="font-semibold">one hour</span>.
         </p>
       </div>
 
@@ -43,7 +43,7 @@
       <div class="mx-auto my-10 w-max block">
         <div class="mx-auto w-max">
           <a target="_blank"
-            href="http://accounts.fikani.com/confirm-email?utm_email=<%-email%>&utm_type=exhibitor&utm_key=<%-key%>">
+            href="http://accounts.fikani.com/confirm-email?token=<%-email_token%>&utm_email=<%-email%>&utm_type=exhibitor&utm_key=<%-key%>">
             <button class="btn mt-2 white-1 bg-blue-1 rounded-lg py-3 px-6 uppercase text-md font-bold">
               Confirm email and login
             </button>
